tests/fixtures/invalid/bool_bitor_none.py
# Cannot bitwise OR Bool and None
x: bool = True | None
